# gptnt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  docker-compose.yml  mise.generate.toml  mise.toml  pyproject.toml  rabbitmq.conf  zensical.toml
.github/workflows/: CODEOWNERS  ci.yaml  docs.yaml  pr_title.yaml  release.yaml
configs/: anchors.yaml  experiment_generator.yaml  player.yaml  suite_generator.yaml
configs/communication_style/: async.yaml  sync.yaml
configs/experiment/: _e.yaml  e0-async.yaml  e0-n-oracle.yaml  e0-n-solo.yaml  e0-oracle.yaml  e0-random.yaml  e0-solo.yaml  e0.yaml  e0_par.yaml  e0_seq.yaml  e1-single-pairwise-act.yaml  e1-single-pairwise-dreact.yaml  e1-single-pairwise-redact.yaml  e1-single-pairwise.yaml  e1.yaml  e1_1.yaml  e1_1b.yaml  e1_2.yaml  e1_3.yaml  e2-single-small-best-defuser.yaml  e2-single-small-best-expert.yaml  e2-single-small-self.yaml  e2-single-solo-defuser.yaml  e2.yaml  e2_1.yaml  e2_2.yaml  e3-single-solo-defuser.yaml  e3-single-solo-player.yaml  e3.yaml  e4_1.yaml  e4_2.yaml  e4_3.yaml  e4_4.yaml  e4_5.yaml  e4_6.yaml  e5-2front-best-defuser.yaml  e5-2front-best-expert.yaml  e5-2front-self.yaml  e5-2frontback-best-defuser.yaml  e5-2frontback-best-expert.yaml  (+34 more)
configs/hydra/: default.yaml
configs/mission_condition/: multiple_modules_2.yaml  multiple_modules_2_front.yaml  multiple_modules_n.yaml  repeated_modules_2.yaml  repeated_modules_4.yaml  single_module.yaml
configs/missions/: README.md
configs/model/: _vllm.yaml  claude-sonnet-4-6.yaml  claude37.yaml  claude37_bedrock.yaml  claude45.yaml  claude45_bedrock.yaml  claude46.yaml  default.yaml  gemini-2.yaml  gemini-25.yaml  gemini-25pro.yaml  gemini-3-flash-preview.yaml  gemini-3.yaml  gemini-3pro.yaml  gemini.yaml  gpt-5-2.yaml  gpt41.yaml  gpt4o-mini.yaml  gpt4o.yaml  gpt5.yaml  gpt51-chat.yaml  gpt52-chat_openai.yaml  gpt52.yaml  internvl3-2b.yaml  internvl3-38b.yaml  internvl3-8b.yaml  internvl35-38b.yaml  internvl35.yaml  internvl3_5-38b.yaml  llama32vision.yaml  o4-mini.yaml  ollama.yaml  qwen25vl-32b.yaml  qwen25vl-3b.yaml  qwen25vl-7b.yaml  qwen35.yaml  qwen3vl-32b.yaml  qwen3vl.yaml  test.yaml  test_defuser.yaml  (+4 more)
configs/pairing/: no_expert.yaml  with_best_defuser.yaml  with_best_expert.yaml  with_self.yaml
configs/player/: claude-sonnet-4-6.yaml  gemini-3-flash-preview.yaml  gpt-5-2.yaml  internvl3-5-38b.yaml  qwen3-5-27b.yaml  test-defuser.yaml  test-expert.yaml  test-oracle.yaml  test-random.yaml
configs/player_specs/: _default.yaml  defuser.yaml  expert.yaml
configs/players/: closed_only.yaml  default.yaml  smaller.yaml  test.yaml  test_defuser.yaml  test_oracle.yaml
configs/suites/: _template.yaml  multi-self-async.yaml  multi-self-sync.yaml  single-pairwise-sync.yaml  single-parametric-sync.yaml  single-self-async.yaml  single-self-sync.yaml  single-solo-player-sync.yaml
configs/system_prompt/: defuser.yaml  defuser_realtime.yaml  defuser_solo.yaml  expert.yaml  none.yaml
configs/think_framework/: act.yaml  dreact.yaml  react.yaml  redact.yaml
docs/: comparability.md  get-started.md  how-to-change-settings.md  how-to-observability.md  how-to-run-statics.md  how-to-warmup-box.md  index.md  recording-and-ledgers.md  submit-your-results.md  suites.md  terminology.md
docs/_old/: glossary.md  how-to-run-statics.md  old-readme.md  pipeline.mmd  suites.md
docs/concepts/: ktane.md  observability.md  tracking-experiments.md
docs/get-started/: index.md  installation.md  versioning.md
docs/includes/: abbreviations.md
docs/internals/: architecture.md  index.md
docs/javascripts/: beautiful-mermaid.js
docs/running/: add-new-player.md  add-your-model.md  index.md  run-your-model.md  submit-your-results.md
docs/stylesheets/: extra.css
runs/: _template.yaml  all-suites.yaml  headline.yaml  quickstart.yaml
scripts/: analyse_results.py  calculate_usage_stats.py  check_experiments.py  compare_game_resolutions.py  dedupe_experiments.py  download_predictions.py  download_summaries.py  exp_gen.py  experiment_generation_test.py  find_best_player.py  find_best_seed.py  find_broken_experiment.py  release.py  replace_experiment_with_attempt.py  simon_says_defuser.py  som_profiler.py  som_viewer.py  startx.py  statics_results_into_tables.py  stress_test.sh  stress_test_old.sh  testing_game_buffer.py  throw.sh  throw_opensource.sh  thrownew.sh  upload_predictions.py  view_dialogue.py  view_results.py
src/gptnt/: __init__.py  __main__.py  specification.py
storage/: llm_cost.json  multiple_difficulty_ratings.json  otel-collector-config-nop.yaml  otel-collector-config.yaml  single_difficulty_ratings.json
storage/experiments/: test.json
storage/ktane/: logConfig.xml
storage/manual/: README.md
storage/prompts/: commands.md  commands_do_nothing.md  commands_interact_game.md  commands_interact_game_coordinates.md  commands_interact_game_set-of-marks.md  commands_send_message.md  mechanics_defuser.md  mechanics_defuser_coordinates.md  mechanics_defuser_non-bomb-elements.md  mechanics_defuser_realtime.md  mechanics_defuser_set-of-marks.md  mechanics_expert.md  reasoning.md  reasoning_defuser.md  reasoning_expert.md  reasoning_inner-monologue.md  reasoning_oss.md  reasoning_thinking-out-loud.md  reflection.txt  reflection_solo.txt  requirements.md  requirements_action.md  requirements_action_realtime.md  requirements_action_set-of-marks.md  requirements_communication_defuser.md  requirements_communication_defuser_set-of-marks.md  requirements_communication_defuser_thoughts.md  requirements_communication_expert.md  requirements_communication_expert_thoughts.md  requirements_completion_defuser.md  requirements_completion_expert.md  requirements_formatting.md  requirements_formatting_commands.md  roles_defuser.md  (+19 more)
tests/: _cli_runner.py  conftest.py  test_app.py  test_common_paths.py  test_example.py  test_experiment_spec_generate.py  test_hydra.py  test_hydra_player.py  test_ktane_client.py  test_prompts.py  test_prompts_instructions.py  test_retrying_client.py  test_som.py
(+836 files in other folders)
