[project]
name = "gptnt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Amit Parekh", email = "7276308+amitkparekh@users.noreply.github.com"},
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "gradio>=5.20.1",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.24",
    "rich>=13.9.4",
    "structlog>=25.1.0",
    "typer>=0.15.1",
    "websockets>=14.2",
]

[dependency-groups]
tests = [
    "hypothesis>=6.123.13",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cases>=3.8.6",
    "pytest-emoji>=0.2.0",
    "pytest-md>=0.2.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "respx>=0.22.0",
]
lint = [
    "basedpyright>=1.23.2",
    "docformatter>=1.7.5",
    "flake8-pyproject>=1.2.3",
    "pre-commit>=4.0.1",
    "ruff>=0.9.0",
    "toml-sort>=0.24.2",
    "wemake-python-styleguide>=1.0.0",
]

[tool.basedpyright]
verboseOutput = true
typeCheckingMode = "recommended"
reportAny = false
reportExplicitAny = false
reportImplicitOverride = true
reportIncompatibleMethodOverride = true
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
# Covered by ruff
reportDeprecated = false
reportImplicitStringConcatenation = false
reportMissingParameterType = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedParameter = false
reportUnusedVariable = false
executionEnvironments = [
    {root = "tests", extraPaths = ["."], reportArgumentType = false},
]

[tool.flake8]
extend-exclude = [".venv"]
extend-ignore = [
    # basedpyright checks for unused variables
    "WPS122",
    # WPS struggles with pydantic models
    "WPS601",
]
per-file-ignores = [
    "tests/*:WPS2,WPS118,WPS432,WPS435,WPS444,WPS476",
]
select = ["WPS"]
max-line-length = 99
nested-classes-whitelist = ["Meta", "Params", "Config"]
allowed-domain-names = ["data", "params"]
# WPS211: Increase number of arguments allowed for a function
max-arguments = 10
# WPS214: Increase number of methods allowed for a class
max-methods = 20
# WPS235: Increase number of imports allowed from a module
max-import-from-members = 10
# WPS226: Increase number of string literals allowed before wemake complains
max-string-usages = 10
# WPS234: Increase max annotation complexity
max-annotation-complexity = 5
# WPS221: Increase max jones compexity
max-line-complexity = 17

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 99
target-version = "py312"
unsafe-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
# Enable every possible rule
select = ["ALL"]
external = ["WPS"]
ignore = [
    # Don't ask for docstring at top of module --- put it in the functions/classes
    "D100",
    # Do not check for docstring within __init__ method
    "D107",
    # Don't ask about line length, Black recommends using bugbear B950 instead
    "E501",
    # Allow import to be uppercase, because torch.nn.functional as F
    "N812",
    # Allow asserts to be used because they're just convenient for type-narrowing. Type-narrowing
    # is more important than the possibility that someone is running python with -O (in optimized
    # mode).
    # https://stackoverflow.com/a/68429294
    "S101",
    # Do not enforce annotations for self, cls, or similar
    "ANN1",
    # Do not block using 'Any' type since it happens
    "ANN401",
    # Let Black handle commas
    "COM",
    # Let logging use f-strings
    "G004",
    # Disable 'flake8-errmsg' because we assume users of this project can read tracebacks
    "EM",
    # Allow TODO comments
    "FIX002",
    # Allow assigning variables before returning them
    "RET504",
    # Don't care about requiring an author name or issue link for a todo
    "TD002",
    "TD003",
    # Disable flagging commented-out code because it's false-positives on shape comments
    "ERA001",
    # Words in exceptions are fine.
    "TRY003",
    # Things to ignore because ruff's formatter says so
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
unfixable = [
    # Do not remove unused variables
    "F841",
    # Do not auto-remove commented out code
    "ERA001",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions", "pydantic_numpy"]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic.generics.GenericModel",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["gptnt"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D", "F401", "I002"]
"**/tests/*" = ["D", "S101", "INP001", "PLR2004", "FBT001", "SLF001"]
"scripts/*" = ["INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 20

[tool.tomlsort]
sort_first = ["project", "dependency-groups", "tool"]
spaces_indent_inline_array = 4 # Matching editorconfig
trailing_comma_inline_array = true
overrides."project".first = [
    "name",
    "version",
    "description",
    "authors",
    "license",
    "readme",
    "requires-python",
]
overrides."tool".first = ["uv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
