[project]
name = "gptnt"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Amit Parekh", email = "7276308+amitkparekh@users.noreply.github.com"},
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "anyio>=4.9.0",
    "color-contrast>=0.1.1",
    "datasets>=3.6.0",
    "deepdiff>=8.4.2",
    "dill>=0.3.8",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "hypercorn>=0.17.3",
    "logfire[fastapi,httpx,redis,system-metrics]>=3.14.0",
    "more-itertools>=10.7.0",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "polars>=1.28.1",
    "psutil>=7.0.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pydantic-ai>=1",
    "rich>=13.9.4",
    "scikit-image>=0.25.2",
    "sentence-transformers>=4.1.0",
    "structlog>=25.1.0",
    "tiktoken>=0.9.0",
    "typer>=0.15.1",
    "unflatten>=0.2.0",
    "wandb[media]>=0.19.9,<0.22.1",
    "weave>=0.51.44",
    "whenever>=0.7.3",
    "fastapi>=0.117.1",
    "json-repair>=0.52.0",
    "faststream[otel,redis]>=0.6.2",
    "orjson>=3.11.5",
    "pybase64>=1.4.3",
    "coredis>=6.0.0",
    "htbuilder>=0.9.0",
    "case-converter>=1.2.0",
    "streamlit>=1.40.0",
    "st-tailwind>=1.3.0",
]

[project.scripts]
gptnt = "gptnt:__main__.main"

[dependency-groups]
tests = [
    "hypothesis>=6.131.0",
    "pytest>=8.3.4",
    "pytest-cases>=3.8.6",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "fakeredis>=2.30.1",
    "asgi-lifespan>=2.1.0",
    "respx>=0.22.0",
    "pytest-factoryboy>=2.8.1",
]
lint = [
    "basedpyright>=1.29.2",
    "docformatter>=1.7.5",
    "flake8-pyproject>=1.2.3",
    "prek>=0.2.23",
    "ruff>=0.9.0",
    "toml-sort>=0.24.2",
    "wemake-python-styleguide>=1.0.0",
]
visualisation = [
    "pymupdf>=1.26.6",
    "streamlit-drawable-canvas>=0.9.3",
]

[tool.uv]
override-dependencies = ["streamlit>=1.40.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    {index = "pytorch-cpu"},
]

[tool.basedpyright]
verboseOutput = true
typeCheckingMode = "recommended"
reportAny = false
reportExplicitAny = false
reportImplicitOverride = true
reportIncompatibleMethodOverride = true
reportMissingSuperCall = true
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
# Covered by ruff
reportDeprecated = false
reportImplicitStringConcatenation = false
reportMissingParameterType = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedParameter = false
reportUnusedVariable = false
executionEnvironments = [
    {root = "tests", extraPaths = ["."], reportArgumentType = false},
]
ignore = ["scripts", "storage", "wandb", "configs"]

[tool.flake8]
extend-exclude = [".venv"]
extend-ignore = [
    # basedpyright checks for unused variables
    "WPS122",
    # WPS struggles with pydantic models
    "WPS601",
    # I disagree with WPS114
    "WPS114",
    # f-strings are the way, this is just it now
    "WPS237",
    # Imports happen. That's fine
    "WPS201",
    # Allow init logic because makes importing easier
    "WPS412",
    # Handled by ruff PLR2004
    "WPS432",
    # Free the walrus
    "WPS332",
    # I disagree with demanding the use of dict.get()
    "WPS529",
    # I disagree with the limits on slicing?
    "WPS478",
    # Unfortunately, we can't control what other people name things
    "WPS347",
    # Module complexity doesnt seem to work consistently, so we can just disable it
    "WPS232",
]
per-file-ignores = [
    "scripts/*:WPS",
    "tests/*:WPS110,WPS2,WPS118,WPS432,WPS435,WPS444,WPS476,WPS411",
    "src/gptnt/ktane/state/*:WPS202,WPS226",
    "src/gptnt/processors/*:WPS203",
    "src/gptnt/dataset/*:WPS202,WPS204,WPS226",
    "src/gptnt/common/respx_router*:WPS232",
    "src/gptnt/players/ai/tokens.py:WPS402",
]
select = ["WPS"]
max-line-length = 99
nested-classes-whitelist = ["Meta", "Params", "Config"]
allowed-domain-names = ["data", "params", "content"]
# WPS211: Increase number of arguments allowed for a function
max-arguments = 10
# WPS214: Increase number of methods allowed for a class
max-methods = 25
# WPS235: Increase number of imports allowed from a module
max-import-from-members = 10
# WPS226: Increase number of string literals allowed before wemake complains
max-string-usages = 14
# WPS234: Increase max annotation complexity
max-annotation-complexity = 5
# WPS221: Increase max jones compexity
max-line-complexity = 18
# WPS202: Increase max module members
max-module-members = 15
# WPS210: Increase max number of variables in a function
max-local-variables = 10
# WPS217: increase max number of awaitable
max-awaits = 10
# WPS204: Increase overused expression limit in a module
max-module-expressions = 10

[tool.logfire]
pydantic_plugin_record = "failure"
ignore_no_config = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 99
target-version = "py312"
unsafe-fixes = true
src = ["src"]
force-exclude = true

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
# Enable every possible rule
select = ["ALL"]
external = ["WPS"]
ignore = [
    # Don't ask for docstring at top of module --- put it in the functions/classes
    "D100",
    # Do not check for docstring within __init__ method
    "D107",
    # Don't ask about line length, Black recommends using bugbear B950 instead
    "E501",
    # Allow import to be uppercase, because torch.nn.functional as F
    "N812",
    # Allow asserts to be used because they're just convenient for type-narrowing. Type-narrowing
    # is more important than the possibility that someone is running python with -O (in optimized
    # mode).
    # https://stackoverflow.com/a/68429294
    "S101",
    # Do not enforce annotations for self, cls, or similar
    "ANN1",
    # Do not block using 'Any' type since it happens
    "ANN401",
    # Let Black handle commas
    "COM",
    # Let logging use f-strings
    "G004",
    # Disable 'flake8-errmsg' because we assume users of this project can read tracebacks
    "EM",
    # Allow TODO comments
    "FIX002",
    # Allow assigning variables before returning them
    "RET504",
    # Don't care about requiring an author name or issue link for a todo
    "TD002",
    "TD003",
    # Disable flagging commented-out code because it's false-positives on shape comments
    "ERA001",
    # Words in exceptions are fine.
    "TRY003",
    # we are not doing cryptography here
    "S311",
    # Things to ignore because ruff's formatter says so
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
unfixable = [
    # Do not remove unused variables
    "F841",
    # Do not auto-remove commented out code
    "ERA001",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions", "pydantic_numpy"]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic.generics.GenericModel",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["gptnt"]
split-on-trailing-comma = false
forced-separate = ["tests"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D", "F401", "I002"]
"**/tests/*" = ["D", "S101", "INP001", "PLR2004", "FBT001", "SLF001", "ANN001"]
"scripts/*" = ["INP001", "D", "ANN", "PLR", "PD", "S"]
"src/gptnt/dataset/defuser_vqa/*" = ["S311"] # Allow standard random for dataset generation
"src/gptnt/players/ai/tokens.py" = ["PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 20

[tool.tomlsort]
sort_first = ["project", "dependency-groups", "tool"]
spaces_indent_inline_array = 4 # Matching editorconfig
trailing_comma_inline_array = true
overrides."project".first = [
    "name",
    "version",
    "description",
    "authors",
    "license",
    "readme",
    "requires-python",
]
overrides."tool".first = ["uv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
