[project]
name = "gptnt"
dynamic = ["version"]
description = "GPTNT: KTANE LLM-agent benchmark — domain, experiments, services, dashboard, CLI."
requires-python = ">=3.13, <3.14"
dependencies = [
    "anyio>=4.9.0",
    "case-converter>=1.2.0",
    "color-contrast>=0.1.1",
    "coredis>=6.0.0",
    "cyclopts>=4.8",
    "datasets>=3.6.0",
    "dill>=0.3.8",
    "duckdb>=1.4.4",
    "fastapi>=0.117.1",
    "faststream[otel,redis]>=0.6.2",
    "htbuilder>=0.9.0",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "hypercorn>=0.17.3",
    "json-repair>=0.52.0",
    "logfire[fastapi,httpx,redis,system-metrics]>=3.14.0",
    "more-itertools>=10.7.0",
    "msgpack>=1.1.2",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "orjson>=3.11.5",
    "pillow>=11.1.0",
    "polars>=1.28.1",
    "psutil>=7.0.0",
    "pyarrow>=19.0.1",
    "pybase64>=1.4.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=2,<3",
    "pydantic-settings>=2.11.0",
    "rich>=13.9.4",
    "scikit-image>=0.25.2",
    "sentence-transformers>=4.1.0",
    "st-tailwind>=1.3.0",
    "streamlit>=1.40.0",
    "streamlit-code-editor>=0.1.22",
    "structlog>=25.1.0",
    "tiktoken>=0.9.0",
    "tomlkit>=0.13.3",
    "whenever>=0.7.3",
    "zstandard>=0.25.0",
]

# Single opt-in: W&B run-logging recorder + wandb-backed status/cleanup/records commands, Weave
# upload for statics. Everything records to disk without it; the
# W&B/Weave imports are guarded.
[project.optional-dependencies]
submission = [
    "pygit2>=1.19.3",
    "pygithub>=2.9.1",
]
wandb = [
    "wandb[media]>=0.19.9,<0.22.1",
    "weave>=0.51.44",
]

[project.scripts]
gptnt = "gptnt.cli.__main__:main"
gptnt-statics = "gptnt.cli.statics.__main__:main"

[dependency-groups]
tests = [
    "hypothesis>=6.131.0",
    "inline-snapshot>=0.34.2",
    "pytest<9.1",
    "pytest-cases>=3.8.6",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "fakeredis>=2.30.1",
    "asgi-lifespan>=2.1.0",
    "respx>=0.22.0",
    "deepdiff>=8.4.2",
    "unflatten>=0.2.0",
    "pytest-env>=1.6.0",
]
lint = [
    "basedpyright>=1.29.2",
    "commitizen>=4.0",
    "creosote>=5.2.0",
    "docformatter>=1.7.5",
    "flake8-pyproject>=1.2.3",
    "import-linter>=2.0",
    "prek>=0.2.23",
    "ruff>=0.9.0",
    "toml-sort>=0.24.2",
    "typos>=1.48.0",
    "wemake-python-styleguide>=1.0.0",
]
visualisation = [
    "pymupdf>=1.26.6",
    "streamlit-drawable-canvas>=0.9.3",
]
# Dev/CI only: keeps W&B installed so the optional W&B modules type-check and run locally.
# Runtime W&B support ships as the `gptnt[wandb]` extra.
wandb = [
    "wandb[media]>=0.19.9,<0.22.1",
]
docs = [
    "zensical>=0.0.46",
    "mkdocstrings-python>=1.11.0",
]

[tool.uv]
override-dependencies = ["streamlit>=1.40.0"]

[tool.basedpyright]
verboseOutput = true
typeCheckingMode = "recommended"
reportAny = false
reportExplicitAny = false
reportImplicitOverride = true
reportIncompatibleMethodOverride = true
reportMissingSuperCall = true
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
# Covered by ruff
reportDeprecated = false
reportImplicitStringConcatenation = false
reportMissingParameterType = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedParameter = false
reportUnusedVariable = false
extraPaths = ["src"]
executionEnvironments = [
    {root = "tests", extraPaths = ["."], reportArgumentType = false},
]
ignore = ["scripts", "scrap", "stats", "storage", "wandb", "configs"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
# Read the version from git tags (pairs with uv-dynamic-versioning); cz only creates the tag.
version_provider = "scm"
version_scheme = "semver"
update_changelog_on_bump = true
# Sign the tag with the version as its message. Git's tag.gpgsign already forces a signed annotated
# tag, which needs a message; without this cz omits one and git blocks on an editor.
gpg_sign = true

[tool.coverage.report]
skip_covered = true
show_missing = true
ignore_errors = true
precision = 2
exclude_lines = [
    'pragma: no cover',
    'pragma: lax no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@deprecated',
    '@typing.overload',
    '@abstractmethod',
    '\(Protocol\):$',
    'typing.assert_never',
    '$\s*assert_never\(',
    'if __name__ == .__main__.:',
    'except ImportError as _import_error:',
    '$\s*pass$',
    'assert False',
    '@pytest\.mark\.skip',
    '@pytest\.mark\.xfail',
]

[tool.coverage.run]
patch = ["subprocess"]
concurrency = ["multiprocessing", "thread"]
data_file = ".coverage/.coverage"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]
disable_warnings = ["include-ignored"]

[tool.creosote]
venvs = [".venv"]
paths = ["src"]
deps-file = "pyproject.toml"
sections = ["project.dependencies"]
# exclude-deps =[]
include-deferred = true

[tool.flake8]
extend-exclude = [".venv"]
extend-ignore = [
    # basedpyright checks for unused variables
    "WPS122",
    # WPS struggles with pydantic models
    "WPS601",
    # I disagree with WPS114
    "WPS114",
    # f-strings are the way, this is just it now
    "WPS237",
    # Imports happen. That's fine
    "WPS201",
    # Allow init logic because makes importing easier
    "WPS412",
    # Handled by ruff PLR2004
    "WPS432",
    # Free the walrus
    "WPS332",
    # I disagree with demanding the use of dict.get()
    "WPS529",
    # I disagree with the limits on slicing?
    "WPS478",
    # Unfortunately, we can't control what other people name things
    "WPS347",
    # Module complexity doesnt seem to work consistently, so we can just disable it
    "WPS232",
]
per-file-ignores = [
    "scripts/*:WPS",
    "scrap/*:WPS",
    "tests/*:WPS110,WPS2,WPS118,WPS407,WPS432,WPS435,WPS444,WPS476,WPS411",
    "src/gptnt/cli/*:WPS211,WPS213,WPS238,WPS407",
    # interactive/orchestration/{orchestrator,spawn}.py are the run-supervisor engine;
    # engine-shaped bodies (many expressions/args for the lifecycle + spawn commands).
    "src/gptnt/interactive/orchestration/*:WPS211,WPS213,WPS238,WPS407",
    # cli/__main__.py is the root command-assembly module: one flat list of `app.command(...)`
    # registrations, so it trips the "too many expressions" check (same shape as interactive's).
    "src/gptnt/cli/__main__.py:WPS213",
    "src/gptnt/ktane/state/*:WPS202,WPS226",
    # doctor/checks.py and submission/_checks.py are registries of small check functions (many
    # members) with one fix-hint string each (many literals)
    "src/gptnt/cli/doctor/checks.py:WPS202,WPS226",
    "src/gptnt/cli/submission/_checks.py:WPS202",
    "src/gptnt/processors/*:WPS203",
    "src/gptnt/experiments/db/schema.py:WPS110,WPS111,WPS430",
]
select = ["WPS"]
max-line-length = 99
nested-classes-whitelist = ["Meta", "Params", "Config"]
allowed-domain-names = ["data", "params", "content"]
# WPS211: Increase number of arguments allowed for a function
max-arguments = 10
# WPS214: Increase number of methods allowed for a class
max-methods = 25
# WPS235: Increase number of imports allowed from a module
max-import-from-members = 10
# WPS226: Increase number of string literals allowed before wemake complains
max-string-usages = 14
# WPS234: Increase max annotation complexity
max-annotation-complexity = 5
# WPS221: Increase max jones compexity
max-line-complexity = 18
# WPS202: Increase max module members
max-module-members = 15
# WPS210: Increase max number of variables in a function
max-local-variables = 10
# WPS217: increase max number of awaitable
max-awaits = 10
# WPS204: Increase overused expression limit in a module
max-module-expressions = 10
# WPS410: Allow __all__ to be defined in modules
allowed-module-metadata = ["__all__"]

[tool.hatch]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "gptnt/_configs"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.importlinter]
root_package = "gptnt"

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
containers = ["gptnt"]
layers = [
    "cli",
    "statics | app | interactive",
    "experiments",
    "players : processors : prompts",
    "ktane",
    "common : observability",
]

[tool.logfire]
pydantic_plugin_record = "failure"
ignore_no_config = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: in-situ integration test (fake Redis + fake game; no external infra needed)",
    "slow: slower test, kept out of the quick feedback loop",
    "requires_game: needs the real KTANE binary + a display; skipped in CI",
]

[tool.pytest_env]
HEARTBEAT_REPEAT_INTERVAL = "0.1"
HEARTBEAT_CHECK_INTERVAL = "0.1"
HEARTBEAT_EXPIRATION = "5"
GAME_STATE_INTERVAL = "0.1"
SESSION_STATE_WATCHER_INTERVAL = "0.1"
UPDATE_METRICS_INTERVAL = "0.5"
DEBUG = "true"
WEAVE_DISABLED = "true"
WANDB_MODE = "disabled"
# Render every `rich` console as plain text; a coloured environment (`FORCE_COLOR`) otherwise emits
# ANSI escapes into the buffers CLI tests assert on, splitting the plain substrings they match.
TTY_COMPATIBLE = "0"

[tool.ruff]
line-length = 99
target-version = "py313"
unsafe-fixes = true
src = ["src"]
force-exclude = true

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
# Enable every possible rule
select = ["ALL"]
external = ["WPS"]
ignore = [
    # Don't ask for docstring at top of module --- put it in the functions/classes
    "D100",
    # Do not check for docstring within __init__ method
    "D107",
    # Don't ask about line length, Black recommends using bugbear B950 instead
    "E501",
    # Allow import to be uppercase, because torch.nn.functional as F
    "N812",
    # Allow asserts to be used because they're just convenient for type-narrowing. Type-narrowing
    # is more important than the possibility that someone is running python with -O (in optimized
    # mode).
    # https://stackoverflow.com/a/68429294
    "S101",
    # Do not enforce annotations for self, cls, or similar
    "ANN1",
    # Do not block using 'Any' type since it happens
    "ANN401",
    # Let Black handle commas
    "COM",
    # Let logging use f-strings
    "G004",
    # Disable 'flake8-errmsg' because we assume users of this project can read tracebacks
    "EM",
    # Allow TODO comments
    "FIX002",
    # Allow assigning variables before returning them
    "RET504",
    # Don't care about requiring an author name or issue link for a todo
    "TD002",
    "TD003",
    # Disable flagging commented-out code because it's false-positives on shape comments
    "ERA001",
    # Words in exceptions are fine.
    "TRY003",
    # we are not doing cryptography here
    "S311",
    # it's hard to enforce having a full exec path since everyone's machines works differently
    "S607",
    # Things to ignore because ruff's formatter says so
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
unfixable = [
    # Do not remove unused variables
    "F841",
    # Do not auto-remove commented out code
    "ERA001",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic.generics.GenericModel",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["gptnt"]
split-on-trailing-comma = false
forced-separate = ["tests"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D", "F401", "I002"]
"**/tests/*" = ["D", "S101", "INP001", "PLR2004", "FBT001", "SLF001", "ANN001", "ARG001"]
"scripts/*" = ["INP001", "D", "ANN", "PLR", "PD", "S"]
"scrap/*" = ["INP001", "D", "ANN", "PLR", "PD", "S", "T201"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 99

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 20

[tool.tomlsort]
sort_first = ["project", "dependency-groups", "tool"]
spaces_indent_inline_array = 4 # Matching editorconfig
trailing_comma_inline_array = true
overrides."project".first = [
    "name",
    "version",
    "description",
    "authors",
    "license",
    "readme",
    "requires-python",
]
overrides."tool".first = ["uv"]

[tool.typos.default.extend-identifiers]
Whos_On_First = "Whos_On_First"

[tool.typos.default.extend-words]
whos = "whos" # Who's On First module — identifiers, splits, and docstrings
nin = "nin" # MongoDB $nin operator
ser = "ser" # pydantic-core serializer abbreviation
mis = "mis" # English prefix (mis-parsing, mis-read, etc.)
som = "som"

[tool.typos.files]
extend-exclude = ["*.lock", "CHANGELOG.md", "configs/missions/**/*.json", "src/gptnt/statics/constants.py", "src/gptnt/ktane/state/constants.py"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
